# DAOMatcher-Backend

./: .env.example  .gitignore  Dockerfile  LLM.py  README.md  Scraping.py  Server.py  app.py  config.py  pyproject.toml  requirements.txt  setup.sh  test_model_graded_eval.py  test_rule_based_eval.py
.github/workflow/: build_image.yml
.github/workflows/: build_image.yml  run_tests.yml
env/: pyvenv.cfg
migrations/versions/: 0512869c9d89_fix_changed_user_id_maximum_length.py  1078ce6cf1c8_refactor_renamed_seed_user_name.py  15b2929e32a0_.py  193eafb0bcdf_.py  1be4bdf8b204_merge_heads.py  1f81adab1921_chore_removed_passoword_and_salt_.py  2a0f722bf6b0_fix_added_verified_at_boolean.py  2d4b62e5eaba_refactor_changed_username_to_non_unique.py  31c3100ffaf4_fix_changed_user_id_maximum_length.py  31cabbc1b34e_fix_foreign_key_interdependecy.py  3292a1bedfac_refactor_changed_username_to_non_unique.py  3666b3c45826_refactor_added_username_type_to_many_to_.py  39aa7993c914_feat_increased_length_for_type_in_.py  3a3631c8bc88_refactor_changed_some_fields_to_.py  3efd9fb4b263_test_testing_migration.py  439ae76427a9_fix_foreign_key_interdependecy.py  43f64194aa28_fix_changed_user_password_maximum_length.py  48973ae9bef1_merge_heads.py  50b3113a6691_.py  5289e420251a_refactor_made_some_not_common_to_all_.py  5b0b7205085d_feat_added_some_default_values.py  5c6a333de7dc_.py  60ad3699c488_merge_heads.py  6af4f2ee7e25_refactor_added_missing_fields_to_the_.py  6be0d8553451_refactor_cascade_on_delete.py  70c11d52719a_.py  71f008a73f7e_fix_length_for_password_and_salt.py  762eab069629_fix_changed_user_id_maximum_length.py  7f60bee853a5_fix_changed_user_id_maximum_length.py  89658561c414_merge_heads.py  8c3f7ef1a5ac_feat_added_a_one_to_one_configuration_.py  9725040b1f57_feat_added_one_to_many_relationships.py  9b1fe7b7ddc1_.py  b526391632f3_fix_changed_user_password_and_salt_.py  b5eb84a61fe0_feat_initial_migration_containing_all_.py  be6184a5ead2_.py  bebb7fac1607_feat_added_many_to_many_tables.py  c2b54e4311d8_merge_heads.py  d3df21070fd4_feat_removed_token_fields.py  d69f9db963e1_refactor_added_username_type_to_many_to_.py  (+3 more)
src/: __init__.py  config.py  database.py  extensions.py  globals.py
tests/: integration_test.py
(+62 files in other folders)
