[tool.poetry]
name = "daomatcher-backend"
version = "0.1.0"
description = ""
authors = ["Yab <yabuman46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
Flask = "^2.0.0"
Flask-Cors = "^4.0.0"
Flask-Login = "^0.6.3"
gevent = "^24.2.1"
gunicorn = "^21.2.0"
langchain = "0.0.227"
python-dotenv = "^1.0.1"
Flask-SocketIO = "^5.3.6"
gevent-websocket = "^0.10.1"
google-generativeai = "^0.4.1"
Werkzeug = "2.2.2"
flask-sqlalchemy = "^3.1.1"
mysqlclient = "2.1.0"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
